--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko"
-title                    : "C 프로그래밍"
+title                    : "대한민국"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "권민준"
-description              : "시스템 프로그램을 위한 C언어"
+description              : "권민준 개인 블로그"
 url                      : # the base hostname & protocol for your site e.g. "https://mjkwon315.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mjkwon315/mjkwon315.github.io"
